--- a/iOS_Aura/Base.lproj/Setup.storyboard
+++ b/iOS_Aura/Base.lproj/Setup.storyboard
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gYA-rP-UBo">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gYA-rP-UBo">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -12,7 +16,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ujT-1c-07X">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="Ixf-2l-LA6" kind="relationship" relationship="rootViewController" id="VWT-vQ-Obd"/>
@@ -31,19 +35,19 @@
                         <viewControllerLayoutGuide type="bottom" id="yD8-ak-AX5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="T9e-q3-27B">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAE-cU-uTz">
-                                <rect key="frame" x="0.0" y="565" width="600" height="35"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="-4" y="632" width="375" height="35"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="6CS-2j-av2"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cyX-ev-TCC" customClass="AuraConsoleTextView" customModule="Aura" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="382" width="600" height="175"/>
-                                <color key="backgroundColor" red="0.96012723445892334" green="0.96009838581085205" blue="0.96011471748352051" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="0.0" y="449" width="375" height="175"/>
+                                <color key="backgroundColor" red="0.96012723445892334" green="0.96009838581085205" blue="0.96011471748352051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="l6c-y6-HxX"/>
                                 </constraints>
@@ -51,21 +55,21 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kfe-cp-pfU">
-                                <rect key="frame" x="0.0" y="64" width="600" height="318"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="385"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SetupCellId" textLabel="azg-Ca-XmO" rowHeight="78" style="IBUITableViewCellStyleDefault" id="Cyj-UV-SpT">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="78"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cyj-UV-SpT" id="kWW-Ak-mCZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="77"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="azg-Ca-XmO">
-                                                    <rect key="frame" x="15" y="0.0" width="570" height="77"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="azg-Ca-XmO">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="77.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -74,16 +78,17 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cyX-ev-TCC" firstAttribute="top" secondItem="kfe-cp-pfU" secondAttribute="bottom" id="1xp-ua-n6a"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="top" secondItem="cyX-ev-TCC" secondAttribute="bottom" constant="8" symbolic="YES" id="9wi-xj-aLs"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="leading" secondItem="cyX-ev-TCC" secondAttribute="leading" id="C8I-qn-e3N"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="width" secondItem="T9e-q3-27B" secondAttribute="width" id="Dm3-lU-JwJ"/>
-                            <constraint firstItem="kfe-cp-pfU" firstAttribute="leading" secondItem="T9e-q3-27B" secondAttribute="leadingMargin" constant="-20" id="Ge6-nc-uYC"/>
                             <constraint firstItem="yD8-ak-AX5" firstAttribute="top" secondItem="zAE-cU-uTz" secondAttribute="bottom" id="NqC-2V-Ip6"/>
+                            <constraint firstAttribute="trailing" secondItem="kfe-cp-pfU" secondAttribute="trailing" id="UIu-LB-lfx"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="leading" secondItem="T9e-q3-27B" secondAttribute="leadingMargin" constant="-20" id="XhR-G5-f3I"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="top" secondItem="u8Z-WZ-rcc" secondAttribute="bottom" id="iiG-WC-cJb"/>
+                            <constraint firstItem="kfe-cp-pfU" firstAttribute="leading" secondItem="T9e-q3-27B" secondAttribute="leading" id="m9S-gr-ZIs"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="trailing" secondItem="cyX-ev-TCC" secondAttribute="trailing" id="rdc-8q-fyS"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="width" secondItem="T9e-q3-27B" secondAttribute="width" id="tZ6-bx-Cjw"/>
                         </constraints>
